--- a/front_end/templates/base.html.j2
+++ b/front_end/templates/base.html.j2
@@ -14,6 +14,7 @@
 			<li><a href='/'>Home</a></li>
 			<li><a href='/config'>Config</a></li>
 			<li><a href='/request-score/'>Services</a></li>
+            <li><a href='/status-codes'>Information</a></li>
 		</ul>
 	</nav>
 </div>
