--- a/front_end/templates/info.tmpl.j2
+++ b/front_end/templates/info.tmpl.j2
@@ -1,8 +1,7 @@
 {% extends 'base.html.j2' %}
 {% block head %}
 {{ super() }}
-<link rel='stylesheet' type='text/css' href='/static/scoring.css'>
-<meta http-equiv="refresh" content="30">
+<link rel='stylesheet' type='text/css' href='/static/index.css'>
 {% endblock %}
 {% block content %}
 <table>
