--- a/front_end/templates/base.html.j2
+++ b/front_end/templates/base.html.j2
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <div id='header'>
-	<h1>Interal Service Scoring Machine of Southeast Missouri State</h1>
+	<h1>Internal Service Scoring Machine of Southeast Missouri State</h1>
 	<nav class='pages'>
 		<ul>
 			<li><a href='/'>Home</a></li>
