--- a/front_end/templates/info.tmpl.j2
+++ b/front_end/templates/info.tmpl.j2
@@ -1,49 +1,59 @@
 {% extends 'base.html.j2' %}
 {% block head %}
 {{ super() }}
-<link rel='stylesheet' type='text/css' href='/static/index.css'>
+<link rel='stylesheet' type='text/css' href='/static/info.css'>
 {% endblock %}
 {% block content %}
 <table>
     <tr>
-        <th>Code</th>
-        <th>Explaination</th>
+        <th class='code'>Code</th>
+        <th class='exp'>Explaination</th>
         <th>Possible Fix</th>
     </tr>
-    <tr>
-        <td>20</td>
-        <td>Good Request</td>
+    <tr id='odd_row'>
+        <td class='code'>20</td>
+        <td class='exp'>Good Request</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>21</td>
-        <td>Config Accepted</td>
+        <td class='code'>21</td>
+        <td class='exp'>Config Accepted</td>
+        <td>-</td>
+    </tr>
+    <tr id='odd_row'>
+        <td class='code'>22</td>
+        <td class='exp'>Attempting to Score</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>22</td>
-        <td>Attempting to Score</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>40</td>
-        <td>Did not send data in correct format.</td>
+        <td class='code'>40</td>
+        <td class='exp'>Did not send data in correct format.</td>
         <td>Something internal went wrong on the front end of the application. Check the code...</td>
     </tr>
-    <tr>
-        <td>41</td>
-        <td>Invalid Token</td>
+    <tr id='odd_row'>
+        <td class='code'>41</td>
+        <td class='exp'>Invalid Token</td>
         <td>Restart the front end and back end of the application.</td>
     </tr>
     <tr>
-        <td>42</td>
-        <td>Wrong Method</td>
+        <td class='code'>42</td>
+        <td class='exp'>Wrong Method</td>
         <td>Something internal went wrong. Should have been a POST request not a GET request.</td>
     </tr>
+    <tr id='odd_row'>
+        <td class='code'>43</td>
+        <td class='exp'>Invalid Action</td>
+        <td>Something internal went wrong. The action within the request should be either '<u>config</u>' or '<u>score</u>'.</td>
+    </tr>
     <tr>
-        <td>43</td>
-        <td>Invalid Action</td>
-        <td>Something internal went wrong. The action within the request should be either 'config' or 'score'.</td>
+        <td class='code'>44</td>
+        <td class='exp'>Invalid Service</td>
+        <td>Something internal went wrong. The service within the request should be one of the following: '<u>dns</u>', '<u>splunk</u>', '<u>ecomm</u>', '<u>ldap</u>', '<u>smtp</u>', or '<u>pop3</u>'.</td>
+    </tr>
+    <tr id='odd_row'>
+        <td class='code'>45</td>
+        <td class='exp'>Invalid Configuration</td>
+        <td>Something internal went wrong. All items from the form should in the request.</td>
     </tr>
 </table>
 {% endblock %}
