General Testing and bug smashing

--- a/front_end/templates/index.html.j2
+++ b/front_end/templates/index.html.j2
@@ -126,13 +126,13 @@
 <table>
 	<tr>
 		<th>Service</th>
-		<td id='odd_col'><a href='/request-score/ldap'>LDAP</a></td>
-		<td><a href='/request-score/dns-linux'>DNS - Linux</a></td>
-		<td id='odd_col'><a href='/request-score/dns-windows'>DNS - Windows</a></td>
-		<td><a href='/request-score/ecomm'>Ecommerce</a></td>
-		<td id='odd_col'><a href='/request-score/pop3'>POP3</a></td>
-		<td><a href='/request-score/smtp'>SMTP</a></td>
-		<td id='odd_col'><a href='/request-score/splunk'>Splunk</a></td>
+		<td id='odd_col'>LDAP</td>
+		<td>DNS - Linux</td>
+		<td id='odd_col'>DNS - Windows</td>
+		<td>Ecommerce</td>
+		<td id='odd_col'>POP3</td>
+		<td>SMTP</td>
+		<td id='odd_col'>Splunk</td>
 	</tr>
 	<tr>
 		<th></th>
