--- a/scoring_engine/front_end/templates/smtp.tmpl.j2
+++ b/scoring_engine/front_end/templates/smtp.tmpl.j2
@@ -10,6 +10,10 @@
 			<td><input type='text' id='smtp_usr1' name='smtp_usr1' required></td>
 		</tr>
 		<tr>
+			<td><label for='smtp_usr1_pwd'>User 1 Password:</label></td>
+			<td><input type='text' id='smtp_usr1_pwd' name='smtp_usr1_pwd' required></td>
+		</tr>
+		<tr>
 			<td><label for='smtp_usr2'>Username 2:</label></td>
 			<td><input type='text' id='smtp_usr2' name='smtp_usr2' required></td>
 		</tr>
