--- a/scoring_engine/front_end/templates/info.tmpl.j2
+++ b/scoring_engine/front_end/templates/info.tmpl.j2
@@ -48,7 +48,7 @@
     <tr>
         <td class='code'>44</td>
         <td class='exp'>Invalid Service</td>
-        <td>Something internal went wrong. The service within the request should be one of the following: '<u>dns</u>', '<u>splunk</u>', '<u>ecomm</u>', '<u>ldap</u>', '<u>smtp</u>', or '<u>pop3</u>'.</td>
+        <td>Something internal went wrong. The service within the request should be one of the following: '<u>dns</u>', '<u>splunk</u>', '<u>ecomm</u>', '<u>smtp</u>', or '<u>pop3</u>'.</td>
     </tr>
     <tr id='odd_row'>
         <td class='code'>45</td>
